<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".workoutActivity"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/labelInsertName"/>

    <EditText
        android:id="@+id/etWName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/hintInsertWorkouName"
        android:inputType="textPersonName"
        android:minHeight="48dp"/>

    <Button
        android:id="@+id/btnWAdicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/button_add"/>

    <ListView
        android:id="@+id/lvTreinos"
        android:layout_width="409dp"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAdicionarExercicio"
        android:layout_gravity="center_horizontal"
        android:text="@string/button_addExercice"/>

</LinearLayout>